# legged_planner

./: .gitignore  README.md
docs/: README.md
legged_body_msgs/: CMakeLists.txt  README.md  package.xml
legged_body_msgs/msg/: Control.msg  Plan.msg  State.msg
legged_body_planner/: CMakeLists.txt  README.md  package.xml  setup_deps.sh
legged_body_planner/config/: legged_body_planner.yaml  legged_body_planner_topics.yaml
legged_body_planner/include/legged_body_planner/: MultiCommandInterfaceRos.h  legged_body_planner.h  planning_utils.h  trajectories_publisher.h
legged_body_planner/include/legged_body_planner/motion_adapters/: LeggedRobotAdapter.h  MotionAdapter.h
legged_body_planner/include/legged_body_planner/robot_command/: RobotCommand.h  RobotGoalCommand.h  RobotPlanCommand.h  RobotVelocityCommand.h
legged_body_planner/launch/: README.md  legged_body_plan.launch
legged_body_planner/src/: MultiCommandInterfaceRos.cpp  MultiCommandInterfaceRosNode.cpp  legged_body_planner.cpp  legged_body_planner_node.cpp  planning_utils.cpp  trajectories_publisher.cpp
legged_body_planner/src/motion_adapters/: LeggedRobotAdapter.cpp
legged_body_planner/src/robot_command/: RobotCommand.cpp  RobotGoalCommand.cpp  RobotPlanCommand.cpp  RobotVelocityCommand.cpp
legged_body_planner/src/scripts/: cmd_vel_pub.py  pub_body_plan_demo.py  sym_density.py  traj_pub_demo.py
legged_body_planner/test/: test_legged_body_planner.cpp  test_motion_adapter.cpp  test_robot_command.cpp  test_trajectories_publisher.cpp
legged_body_utils/: CMakeLists.txt  package.xml
legged_body_utils/config/: plotjuggler_config.xml
legged_body_utils/include/legged_body_utils/: math_utils.h  planning_utils.h
legged_body_utils/launch/: logging.launch  play_bag.launch  visualization.launch
legged_body_utils/src/: math_utils.cpp  planning_utils.cpp
