<?xml version="1.0"?>
<package format="2">
  <name>legged_body_planner</name>
  <version>0.0.0</version>
  <description>The legged_body_planner package</description>
  <maintainer email="azheng@g.clemson.edu">Andrew Zheng</maintainer>
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/legged_body_planner</url> -->
  <author email="azheng@clemson.edu">Andrew Zheng</author>
  <author email="sriramk@clemson.edu">Sriram S.K.S. Narayanan </author> 


  <test_depend>gtest</test_depend>
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>legged_body_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>ocs2_legged_robot_ros</build_depend>
  <build_depend>ocs2_robotic_tools</build_depend>
  <build_depend>ocs2_ros_interfaces</build_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>legged_body_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>ocs2_legged_robot_ros</build_export_depend>
  <build_export_depend>ocs2_robotic_tools</build_export_depend>
  <build_export_depend>ocs2_ros_interfaces</build_export_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>legged_body_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>ocs2_legged_robot_ros</exec_depend>
  <exec_depend>ocs2_robotic_tools</exec_depend>
  <exec_depend>ocs2_ros_interfaces</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
